<resources>
    <string name="led_test_title">Camera LED Test</string>
    <string name="led_test_title_cn">摄像头指示灯测试</string>
    <string name="led_warn">you should look the led blinking,and select the result later</string>
    <string name="select_cn">请观察LED灯，并作出判断</string>
    <string name="select">you should look the led blinking,and select the result later</string>
    <string name="led_warn_cn">请观察LED灯，并作出判断</string>
    <string name="CameraLED">CameraLED test</string>
    <string name="CameraLED_cn">摄像头指示灯测试</string>
    <string name="hello">Hello World, PQAA!</string>
    <string name="app_name">Generic_PQAA</string>
    <string name="test_title">Test</string>
    <string name="Indicator_test">Test</string>
    <string name="Indicator_test_cn">测试</string>
    <string name="Indicator_config">Config</string>
    <string name="Indicator_config_cn">配置</string>
    <string name="Indicator_about">About</string>
    <string name="Indicator_about_cn">关于</string>
    <string name="wait">Test Items is be launching, please to wait for a while&#8230;</string>
    <string name="wait_cn">测试项正在被加载，请稍等片刻&#8230;</string>
    <string name="Tab_Test">Test</string>
    <string name="Tab_Config">Config</string>
    <string name="Tab_About">About</string>
    <string name="Title_TestItem">TestItem</string>
    <string name="Title_TestItem_cn">测试项</string>
    <string name="Title_CMDLine">CMDLine</string>
    <string name="Title_CMDLine_cn">命令集</string>
    <string name="Title_Result">Result</string>
    <string name="Title_Result_cn">测试结果</string>
    <string name="Tip_Flow">Flow:</string>
    <string name="Tip_Flow_cn">模式：</string>
    <string name="Button_Start">Start</string>
    <string name="Button_Start_cn">开始</string>
    <string name="Button_Stop">Stop</string>
    <string name="Button_Setting">Setting</string>
    <string name="Button_Exit">Exit</string>
    <string name="Button_Pass_Exit">Pass &amp; Exit</string>
    <string name="Button_Fail_Exit">Fail &amp; Exit</string>
    <string name="Button_Scan">Scan</string>
    <string name="Button_Open">Open</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Save">Save</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="autoStart_Title">Auto Start Wait</string>
    <string name="autoStart_Title_cn">自动开始</string>
    <string name="restart_title">Message</string>
    <string name="restart_title_cn">消息</string>
    <string name="restart_msg">total items： %1$d; %2$s items pass for last test, are you want to re-start？</string>
    <string name="restart_msg_cn">当前测试项总数为： %1$d; 上次 %2$s 项测试通过，是否要重新开始测试？</string>
    <string name="restart_ok">Yes</string>
    <string name="restart_ok_cn">是</string>
    <string name="restart_cancel">No</string>
    <string name="restart_cancel_cn">否</string>
    <string name="checkbox_selectall">Select All</string>
    <string name="checkbox_selectall_cn">全选</string>
    <string name="Configuration_remanent">the remanent item:</string>
    <string name="Configuration_current">the current item:</string>
    <string name="pqaa_test_title">PQAA</string>
    <string name="pqaa_test_title_cn">PQAA</string>
    <string name="pqaa_back_dialog_msg">\u003c %1$s \u003e test result is fail, what are you doing&#8230;</string>
    <string name="pqaa_back_dialog_msg_cn">\u003c %1$s \u003e 测试结果为NG，请选择接下来的操作&#8230;</string>
    <string name="pqaa_back_dialog_retry">Retry</string>
    <string name="pqaa_back_dialog_retry_cn">重试</string>
    <string name="pqaa_back_dialog_continue">Continue</string>
    <string name="pqaa_back_dialog_continue_cn">继续</string>
    <string name="pqaa_result_pass">PASS!</string>
    <string name="pqaa_result_pass_cn">通过!</string>
    <string name="pqaa_result_fail">: NG!</string>
    <string name="pqaa_result_fail_cn">: 失败!</string>
    <string name="pqaa_about_error">Can\'t get the PQAA version info.Please contact with Software</string>
    <string name="pqaa_about_error_cn">不能获取PQAA版本信息，请和软件开发人员联系！</string>
    <string name="pqaa_package_not_found">Uninstalled!</string>
    <string name="pqaa_package_not_found_cn">未安装！</string>
    <string name="pqaa_about_key_item">Test Item</string>
    <string name="pqaa_about_key_item_cn">测试项</string>
    <string name="pqaa_about_key_version">Version</string>
    <string name="pqaa_about_key_version_cn">版本</string>
    <string name="pqaa_log_error_not_create">Can\'t create the log file:%1$s</string>
    <string name="pqaa_log_error_not_create_cn">不能建立日志文件:%1$s</string>
    <string name="pqaa_log_item_start">%1$s test start >>>>>></string>
    <string name="pqaa_log_item_result">%1$s test end!!!  *** test result is %2$b \n</string>
    <string name="pqaa_fail_result">Total:%1$d, Pass:%2$d, Fail:%3$d</string>
    <string name="audio_test_title">Audio Test</string>
    <string name="audio_test_title_cn">声音测试</string>
    <string name="headset_test_title">Headset Test</string>
    <string name="headset_test_title_cn">耳机测试</string>
    <string name="audio_plugin_headset">Please insert the headset to start test&#8230;</string>
    <string name="audio_plugin_headset_cn">请插入耳机开始测试..</string>
    <string name="audio_select_none">No test item was selected!</string>
    <string name="audio_select_none_cn">未选择测试项！</string>
    <string name="audio_nosdcard">there is no sdcard!</string>
    <string name="audio_nosdcard_cn">未侦测到SD卡！</string>
    <string name="audio_time_invalid">Please input recording time(seconds)</string>
    <string name="audio_time_invalid_cn">请输入录音时间！</string>
    <string name="audio_warning">Warning</string>
    <string name="audio_warning_cn">警告</string>
    <string name="audio_finish">Finish</string>
    <string name="audio_finish_cn">完成</string>
    <string name="audio_recordtest">Record Test</string>
    <string name="audio_recordtest_cn">录音测试</string>
    <string name="audio_recording">Recording&#8230;</string>
    <string name="audio_recording_cn">正在录音&#8230;</string>
    <string name="audio_playing">Playing&#8230;</string>
    <string name="audio_playing_cn">正在播放&#8230;</string>
    <string name="audio_track_test">Track Test</string>
    <string name="audio_track_test_cn">声道测试</string>
    <string name="audio_stereotest">Stereo Test</string>
    <string name="audio_stereotest_cn">立体声测试</string>
    <string name="audio_receiver">Receiver Test</string>
    <string name="audio_receiver_cn">听筒测试</string>
    <string name="audio_lefttrack">start test left track&#8230;</string>
    <string name="audio_lefttrack_cn">开始左声道测试&#8230;</string>
    <string name="audio_righttrack">start test right track&#8230;</string>
    <string name="audio_righttrack_cn">开始右声道测试&#8230;</string>
    <string name="audio_left_top_track">start test left-top track&#8230;</string>
    <string name="audio_left_top_track_cn">开始左上音频测试&#8230;</string>
    <string name="audio_left_down_track">start test left-down track&#8230;</string>
    <string name="audio_left_down_track_cn">开始左下音频测试&#8230;</string>
    <string name="audio_right_top_track">start test right-top track&#8230;</string>
    <string name="audio_right_top_track_cn">开始右上音频测试&#8230;</string>
    <string name="audio_right_down_track">start test right-down track&#8230;</string>
    <string name="audio_right_down_track_cn">开始右下音频测试&#8230;</string>
    <string name="audio_track_one">你拍一\n我拍一</string>
    <string name="audio_track_one_cn">你拍一\n我拍一</string>
    <string name="audio_track_two">你拍二\n我拍二</string>
    <string name="audio_track_two_cn">你拍二\n我拍二</string>
    <string name="audio_track_three">你拍三\n我拍三</string>
    <string name="audio_track_three_cn">你拍三\n我拍三</string>
    <string name="audio_track_four">你拍四\n我拍四</string>
    <string name="audio_track_four_cn">你拍四\n我拍四</string>
    <string name="audio_track_five">你拍五\n我拍五</string>
    <string name="audio_track_five_cn">你拍五\n我拍五</string>
    <string name="audio_promptdialog_title">Caution!</string>
    <string name="audio_promptdialog_title_cn">提醒！</string>
    <string name="audio_promptdialog_msg">Please listen carefully. You will need to tell what you heard&#8230;</string>
    <string name="audio_promptdialog_msg_cn">请仔细听下面要播放的声音，稍后需要你作出选择&#8230;</string>
    <string name="audio_promptdialog_query">Next</string>
    <string name="audio_promptdialog_query_cn">继续</string>
    <string name="audio_selectdialog_title">Please select the number you just heard!</string>
    <string name="audio_selectdialog_title_cn">请选择你所听到的声音！</string>
    <string name="audio_manual_mic_testresult">Please select the result of Record test</string>
    <string name="audio_manual_mic_testresult_cn">请选择录音测试结果</string>
    <string name="headset_loopback_plugin_headset">Please insert the headset to start test&#8230; %1$s</string>
    <string name="headset_loopback_plugin_headset_cn">请插入耳机开始测试...%1$s</string>
    <string name="headset_loopback_pull_end_test">Plese pull the headset to end test&#8230; %1$s</string>
    <string name="headset_loopback_pull_end_test_cn">请拨出耳机结束测试...%1$s</string>
    <string name="audio_loopback_pull_headset">Please pull the headset to start test&#8230; %1$s</string>
    <string name="audio_loopback_pull_headset_cn">请拨出耳机开始测试...%1$s</string>
    <string name="audio_loopback_test_title">AudioLoopback Test</string>
    <string name="audio_loopback_test_title_cn">音频回放测试</string>
    <string name="headset_loopback_test_title">HeadsetLoopback Test</string>
    <string name="headset_loopback_test_title_cn">耳机回放测试</string>
    <string name="receiver_loopback_test_title">ReceiverLoopbak Test</string>
    <string name="receiver_loopback_test_title_cn">聽筒回放測試</string>
    <string name="audio_loopback_dtmf_set">Audio queue:</string>
    <string name="audio_loopback_dtmf_set_cn">测试序列:</string>
    <string name="audio_loopback_dtmf_decode">Decode result:</string>
    <string name="audio_loopback_dtmf_decode_cn">音频解析序列:</string>
    <string name="audio_loopback_left_times">Left times:</string>
    <string name="audio_loopback_left_times_cn">剩余次数:</string>
    <string name="button_shoot">Take</string>
    <string name="button_flash">Flash</string>
    <string name="camera_front">Front</string>
    <string name="camera_back">Back</string>
    <string name="display_testitem">Test Items : </string>
    <string name="display_solid">Solid Colors Test</string>
    <string name="display_color">Black &amp; White Color Test</string>
    <string name="display_line">Solid Lines Test</string>
    <string name="display_flickers">Flickers Test</string>
    <string name="display_colorbars">Color Bars Test</string>
    <string name="display_checker">Checker Boards Test</string>
    <string name="display_ghosts">Ghosts Test</string>
    <string name="display_setting">Config Settings : </string>
    <string name="display_auto">Auto_Tap</string>
    <string name="sensor_tips">please select the range of test:</string>
    <string name="nfc_do_detect">Doing detect the NFC enable</string>
    <string name="nfc_write_title">NFC Write:</string>
    <string name="nfc_write_tips">Warn: Touch tag to write!</string>
    <string name="nfc_read_title">NFC Read:</string>
    <string name="nfc_read_tips">Warn: Touch tag to read!</string>
    <string name="touchpanel_item">Test Item : </string>
    <string name="touchpanel_corner">Corners Test</string>
    <string name="touchpanel_cross">Cross Test</string>
    <string name="touchpanel_diagonal">Diagonal Test</string>
    <string name="USB_prompt">Please test through the inserted USB device in time:  </string>
    <string name="USB_state">Status:</string>
    <string name="vibration_one">1</string>
    <string name="vibration_two">2</string>
    <string name="vibration_three">3</string>
    <string name="vibration_four">4</string>
    <string name="vibration_five">5</string>
    <string name="test_string">Test</string>
    <string name="button_start">Start</string>
    <string name="button_pass">Pass</string>
    <string name="button_fail">Fail</string>
    <string name="button_exit">Exit</string>
</resources>