<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  	<Button
  		android:id="@+id/track_one"
  		android:layout_width="100px"
  		android:layout_height="wrap_content"
  		android:text="@string/vibration_one"
  		android:textStyle="bold"
  		android:textSize="80dp"
  		android:layout_weight="1"
  		/>
  	<Button
  		android:id="@+id/track_two"
  		android:layout_width="100px"
  		android:layout_height="wrap_content"
  		android:text="@string/vibration_two"
  		android:textStyle="bold"
  		android:textSize="80dp"
  		android:layout_marginLeft="15dp"
  		android:layout_weight="1"
  		/>
  	<Button
  		android:id="@+id/track_three"
  		android:layout_width="100px"
  		android:layout_height="wrap_content"
  		android:text="@string/vibration_three"
  		android:textStyle="bold"
  		android:textSize="80dp"
  		android:layout_marginLeft="15dp"
  		android:layout_weight="1"
  		/>
  	<Button
  		android:id="@+id/track_four"
  		android:layout_width="100px"
  		android:layout_height="wrap_content"
  		android:text="@string/vibration_four"
  		android:textStyle="bold"
  		android:textSize="80dp"
  		android:layout_marginLeft="15dp"
  		android:layout_weight="1"
  		/>
  	<Button
  		android:id="@+id/track_five"
  		android:layout_width="100px"
  		android:layout_height="wrap_content"
  		android:text="@string/vibration_five"
  		android:textStyle="bold"
  		android:textSize="80dp"
  		android:layout_marginLeft="15dp"
  		android:layout_weight="1"
  		/>
</LinearLayout>
