<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/color_background"
    >
    <include layout="@layout/title_divider_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            style="@style/test_content_primary_low"
            android:id="@+id/touchpanel_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/touchpanel_item"
            android:textStyle="bold"
            android:typeface="serif" >
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <CheckBox
                style="@style/test_content_secondary"
                android:button="@drawable/checkbox_style"
                android:id="@+id/touchpanel_corner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/touchpanel_corner" >
            </CheckBox>

            <CheckBox
                style="@style/test_content_secondary"
                android:button="@drawable/checkbox_style"
                android:id="@+id/touchpanel_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/touchpanel_cross" >
            </CheckBox>

            <CheckBox
                style="@style/test_content_secondary"
                android:button="@drawable/checkbox_style"
                android:id="@+id/touchpanel_diagonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/touchpanel_diagonal" >
            </CheckBox>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/divider_layout" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@style/test_button"
            android:id="@+id/touchpanel_start"
            android:text="@string/button_start" >
        </Button>

        <Button
            style="@style/test_button"
            android:id="@+id/touchpanel_exit"
            android:layout_alignParentRight="true"
            android:text="@string/button_exit" >
        </Button>
    </RelativeLayout>

</LinearLayout>